--- a/ads_config.json
+++ b/ads_config.json
@@ -4,15 +4,16 @@
   "data": {
     "admob_show": true,
     "byPass": false,
-    "admob_inter": "",
-    "admob_ntv": "",
-    "admob_bnr": "",
-    "admob_apn": "",
-    "admob_reward": "",
+    "admob_inter": "/21753324030,23334887863/com.loantools.app_Interstitial",
+    "admob_ntv": "/21753324030,23334887863/com.loantools.app_Native",
+    "admob_bnr": "/21753324030,23334887863/com.loantools.app_Banner",
+    "admob_apn": "/21753324030,23334887863/com.loantools.app_AppOpen",
+    "admob_reward": "/21753324030,23334887863/com.loantools.app_Rewarded",
     "admob_intercounter": 3,
     "admob_interval_ads": 3
   }
 }
+
 
 
 
