--- a/loan_ads_config.json
+++ b/loan_ads_config.json
@@ -3,16 +3,16 @@
     "message": "Success",
     "data": {
         "g_banner": [
-            "/21753324030,23334887863/com.loantools.app_Banner"
+            "ca-app-pub-3940256099942544/6300978111"
         ],
         "g_int": [
-            "/21753324030,23334887863/com.loantools.app_Interstitial"
+            "ca-app-pub-3940256099942544/1033173712"
         ],
         "g_native": [
-            "/21753324030,23334887863/com.loantools.app_Native"
+            "ca-app-pub-3940256099942544/2247696110"
         ],
         "g_open": [
-            "/21753324030,23334887863/com.loantools.app_AppOpen"
+            "ca-app-pub-3940256099942544/9257395921"
         ],
         "fb_banner": [],
         "fb_int": [],
@@ -28,7 +28,7 @@
         "is_facebook_first": false,
         "is_mid": true,
         "by_pass": true,
-        "ads_count": 3,
+        "ads_count": 1,
         "backword_ads_count": 1,
         "streaming_video_api": "https://rajanikhana.github.io/mical/all-video-category.json",
         "streaming_live_api": "https://rajanikhana.github.io/mical/video-category.json",
