--- a/loan_ads_config.json
+++ b/loan_ads_config.json
@@ -2,9 +2,7 @@
     "success": true,
     "message": "Success",
     "data": {
-        "g_banner": [
-            "ca-app-pub-3940256099942544/6300978111"
-        ],
+        "g_banner": [],
         "g_int": [
             "ca-app-pub-3940256099942544/1033173712"
         ],
